deployments/unauthorized-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unauthorized-pod
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unauthorized-pod
  template:
    metadata:
      labels:
        app: unauthorized-pod
    spec:
      containers:
      - name: mysql-client
        image: mysql:5.7 
        command: ["/bin/sh", "-c"]
        args:
          - |
            while true; do
              echo "Attempting to connect to MySQL..."
              mysql -h mysql-service -u user -p password -e "SELECT 1";
              sleep 5;  # Wait before trying again
            done
