deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user
spec:
  type: NodePort
  ports:
    - port: 50051
      targetPort: 50051
      protocol: TCP
  selector:
    app: user
