deployments/user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
      - name: user
        image: jaycynth/k8s-network-policies-user:v0.2
        ports:
        - containerPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  name: user
spec:
  type: NodePort
  ports:
    - port: 50051
      targetPort: 50051
      protocol: TCP
  selector:
    app: user
