deployments/allow-user-to-mysql-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-user-to-mysql
spec:
  endpointSelector:
    matchLabels:
      app: user
  egress:
  - toEndpoints:
    - matchLabels:
        app: mysql
