deployments/deny-all.yaml
#All traffic is denied by default unless explicitly allowed
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: deny-all
  namespace: default 
spec:
  endpointSelector:
    matchLabels: {}
  ingress:
  - fromEndpoints: []
