deployments/deny-user-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny-user
spec:
  endpointSelector:
    matchLabels:
      app: user
  ingress:
  - fromEndpoints: []
  egress:
  - toEndpoints: []
