deployments/policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny-user
spec:
  endpointSelector:
    matchLabels:
      app: user
  ingress:
  - fromEndpoints: []
  egress:
  - toEndpoints: []
---

apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-mysql-to-user
spec:
  endpointSelector:
    matchLabels:
      app: user
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: mysql
---

apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-user-to-mysql
spec:
  endpointSelector:
    matchLabels:
      app: user
  egress:
  - toEndpoints:
    - matchLabels:
        app: mysql
